# Car-Checkro

./: LICENSE  README.md
vehicle new/vehicle new/dent_detector/bridge/: README.md  bridge.py  requirements.txt
vehicle new/vehicle new/dent_detector/dent_detector/: CMakeLists.txt
vehicle new/vehicle new/dent_detector/dent_detector/build_wsl/: CMakeCache.txt  Makefile  cmake_install.cmake  dent_detector
vehicle new/vehicle new/dent_detector/dent_detector/include/: camera.h  led_detector.h  preprocess.h  profile.h  reference.h
vehicle new/vehicle new/dent_detector/dent_detector/src/: camera.cpp  led_detector.cpp  main.cpp  preprocess.cpp  profile.cpp  reference.cpp
vehicle new/vehicle new/scratch/scratch-detection/: .gitignore  ANNOTATION_GUIDELINES.md  README.md  requirements.txt
vehicle new/vehicle new/scratch/scratch-detection/dataset/: data.yaml
vehicle new/vehicle new/scratch/scratch-detection/scripts/: audit_and_fix_labels.py  calculate_metrics.py  predict.py  (+7 more)
vehicle new/vehicle new/vehicle/: get_opengl.py  run_gateway_sim.bat  setup_env.py  test_image.py  test_scratch.py
vehicle new/vehicle new/vehicle/ai/: download_model.py  inference.py
vehicle new/vehicle new/vehicle/assets/: CocaCola.mtl
vehicle new/vehicle new/vehicle/oppp/: main.py  verify.py
vehicle new/vehicle new/vehicle/scratch/: simulate_uno_q_http.py
vehicle new/vehicle new/vehicle/src/: config.py  database.py  defect_tracker.py  html_template.py  http_receiver.py  inspection_manager.py  logger.py  main.py  measurement_module.py  message_models.py  parser.py  report_generator.py
(+306 files in other folders)
